# 
# For further information see MDM community web site 
# 
# https://www.mdm-community.org 
# 
# Stop MDM community Header =======================================


0. Contents
	
	These are the release notes of the openATFX library.
	

1. Changes

	0.1.8 (Christian Rechner)
	
		- Performance tuning in method "getInstances" for pattern "*".

	0.1.7 (Florian Steinberger, Christian Rechner)
	
		- Added limited query implementation.
		- Application attributes will now always be considered obligatory, if base attribute is defined as non-optional in the ODS 5.2 specification.
		- Fixed case insensitive lookup of base elements.

	0.1.6
	
		- Added workaround to read DIAdem ATFX files having the wrong relation range (100).
		- Added implicit creation of the application element 'AoExternalComponent', if missing.

	0.1.5
	
		- Fixed session close problem with JacORB.

	0.1.4
	
		- Ident XML output if context parameter "INDENT_XML=YES".
		- Omit writing of "<instance_data>" section if not instances available.
		- Added test for "InstanceElementIterator".
		- Fixed case sensitivity when comparing base attribute/relation names.
		  (Base element/attribute/relation names has to be compared case insensitive)
		- Fixed writing of LocalColumn values.
		
	0.1.3
	
		- Fixed FindBugs warnings.
		- Changed CORBA pattern of InstanceElement objects to FlighWeight using a ServantLocator.
		- Added memory leak detection test.
		- Performed memory leak test with 100000 session.

	0.1.2
		
		- Fixed parsing application relations with a base relation without relation range information.
		- Added ability to read application relations without having to information of the
		  inverse relation in the ATFX file.

	0.1.1
		
		- Fixed parsing of LocalColumn values of type A_TIMESTRING.

	0.1.0
		
		- Initial release.

2. Known Bugs

	- None

3. Future changes

	- Reading mass data from external files.
	- Writing mass data to external files.